src/elements/govuk/layout/style.scss
@import "govuk_frontend_toolkit/grid_layout";
@import "govuk_elements/layout";

// Mobile
.mobile-column-quarter,
.mobile-column-one-quarter {
  @include grid-column(1/4, mobile);
}

.mobile-column-half,
.mobile-column-one-half {
  @include grid-column(1/2, mobile);
}

.mobile-column-third,
.mobile-column-one-third {
  @include grid-column(1/3, mobile);
}

.mobile-column-two-thirds {
  @include grid-column(2/3, mobile);
}

// Tablet
.tablet-column-quarter,
.tablet-column-one-quarter {
  @include grid-column(1/4, 500px);
}

.tablet-column-half,
.tablet-column-one-half {
  @include grid-column(1/2, 500px);
}

.tablet-column-third,
.tablet-column-one-third {
  @include grid-column(1/3, 500px);
}

.tablet-column-two-thirds {
  @include grid-column(2/3, 500px);
}

// Inverted column direction
.column-flip {
  > [class*="column-"] {
    float: right;
    width: 100%;
  }
}

